assets folder, modified layout

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,6 +25,12 @@
           {{ content }}
 
           <div class="footer">
+            <div class="contact" style="vertical-align:middle;">
+              <p>
+                <img src="/assets/snowboard.jpg" height="65" width="65">
+              </p> 
+            </div>
+
             <div class="contact">
               <p>
                 Mike Croft<br />
@@ -32,8 +38,10 @@
                 mcroft@c2b2.co.uk
               </p>
             </div>
-            <div class="contact">
+
+            <div class="contact" style="float:right;">
               <p>
+                <a href="https://bitbucket.org/mikecroft">bitbucket.org/mikecroft</a><br />
                 <a href="https://github.com/mikecroft">github.com/mikecroft</a><br />
                 <a href="https://twitter.com/croft">twitter.com/croft</a><br />
               </p>
