--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@
           <div class="footer">
             <div class="contact" style="vertical-align:middle;">
               <p>
-                <img src="/assets/snowboard.jpg" height="65" width="65">
+                <img src="https://s.gravatar.com/avatar/b6f54f06f25ded37952004147f5ca6f9?s=65" height="65" width="65">
               </p> 
             </div>
 
