--- a/css/main.css
+++ b/css/main.css
@@ -23,6 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
 h1 { margin-bottom: 1em; }
+h2 { padding-top: 1.1em; }
 p { margin: 1em 0; }
 
 a         { color: #00a; }
@@ -121,6 +122,10 @@ a:visited { color: #a0a; }
   border: 0;
 }
 
+ul, ol {
+  margin-left: 3em;
+}
+
 /*****************************************************************************/
 /*
 /* Posts
@@ -132,10 +137,6 @@ a:visited { color: #a0a; }
   border: 1px solid #ddd;
   background-color: #eef;
   padding: 0 .4em;
-}
-
-.post ul, .post ol {
-  margin-left: 1.35em;
 }
 
 .post code {
