--- a/css/main.css
+++ b/css/main.css
@@ -23,7 +23,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 100%; }
 
 h1 { margin-bottom: 1em; }
-h2 { padding-top: 1.1em; }
+h1 { padding-top: 1.1em; }
 p { margin: 1em 0; }
 
 a         { color: #00a; }
@@ -49,6 +49,8 @@ a:visited { color: #a0a; }
   font-family: Monaco, "Courier New", monospace;
   font-size: 80%;
 }
+
+
 
 /*****************************************************************************/
 /*
@@ -159,3 +161,8 @@ ul, ol {
 .post pre.terminal code {
   background-color: #333;
 }
+
+.post h1 { padding-top: 1.1em; }
+.post h2 { padding-top: 1.1em; }
+.post h3 { padding-top: 1.1em; }
+.post h4 { padding-top: 1.1em; }
