--- a/css/main.css
+++ b/css/main.css
@@ -27,9 +27,9 @@ h1 { margin-bottom: 1em; }
 h1 { padding-top: 1.1em; }
 p { margin: 1em 0; }
 
-a         { color: #00a; }
+a         { color: #58e; text-decoration: none; }
+a:visited { color: #888; }
 a:hover   { color: #000; }
-a:visited { color: #a0a; }
 
 /*****************************************************************************/
 /*
@@ -46,7 +46,7 @@ a:visited { color: #a0a; }
 }
 
 .posts span {
-  color: #aaa;
+  color: #777;
   font-family: Monaco, "Courier New", monospace;
   font-size: 80%;
 }
