--- a/css/main.css
+++ b/css/main.css
@@ -176,3 +176,24 @@ ul, ol {
 .post h2 { padding-top: 1.1em; }
 .post h3 { padding-top: 1.1em; }
 .post h4 { padding-top: 1.1em; }
+
+blockquote {
+  background: #f9f9f9;
+  border-left: 5px solid #ccc;
+  margin: 1em 2em 1em 3em;
+  padding: 1.2em 3em 1em 2em;
+  quotes: "\201C""\201D""\2018""\2019";
+}
+
+blockquote:before {
+  color: #ccc;
+  content: open-quote;
+  font-size: 4em;
+  line-height: 0em;
+  margin-right: 0.15em;
+  vertical-align: -0.4em;
+}
+
+blockquote p {
+  display: inline;
+}
