--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,7 @@
             <h1 class="title"><a href="/">{{ site.name }}</a></h1>
             <a class="extra" href="/">home</a>
             <a class="extra" href="/about">about</a> &nbsp; &nbsp;  | 
-            <a class="extra" href="/other-blogs">other blogging</a>
+            <a class="extra" href="/other-blogging">other blogging</a>
             <a class="extra" href="/conferences">conferences</a>
           </div>
 
