--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,7 +25,23 @@
           </div>
 
           {{ content }}
+          {% if page.comments %}
 
+            <div id="disqus_thread></div>
+                <script>
+                    (function() { // DON'T EDIT BELOW THIS LINE
+                        var d = document, s = d.createElement('script');
+                        s.src = '//mikecroft.disqus.com/embed.js';
+                        s.setAttribute('data-timestamp', +new Date());
+                        (d.head || d.body).appendChild(s);
+                    })();
+                </script>
+
+                <noscript>
+                    Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a>
+                </noscript>
+
+          {% endif %}    
           <div class="footer">
             <div class="contact" style="vertical-align:middle;">
               <p>
