enabled comments fully

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,8 +26,8 @@
 
           {{ content }}
           {% if page.comments %}
-
-            <div id="disqus_thread></div>
+            <br />
+            <div id="disqus_thread"></div>
                 <script>
                     (function() { // DON'T EDIT BELOW THIS LINE
                         var d = document, s = d.createElement('script');
