updated email address

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -37,7 +37,7 @@
               <p>
                 Mike Croft<br />
                 Java Middleware Consultant<br />
-                mcroft@c2b2.co.uk
+                mike.croft@payara.fish
               </p>
             </div>
 
