--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
         <title>{{ page.title }}</title>
         <meta name="viewport" content="width=device-width">
-
+        <meta name="google-site-verification" content="mtwO5i5L_qM6IjT4ImqoD9UR7PeJ0JODPhGicoZEppo" />
         <!-- syntax highlighting CSS -->
         <link rel="stylesheet" href="/css/syntax.css">
 
