--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -59,7 +59,7 @@
 
             <div class="contact" style="float:right;">
               <p>
-                <a href="https://bitbucket.org/mikecroft">bitbucket.org/mikecroft</a><br />
+                <a href="https://www.linkedin.com/in/mike-croft">linkedin.com/in/mike-croft</a><br />
                 <a href="https://github.com/mikecroft">github.com/mikecroft</a><br />
                 <a href="https://twitter.com/croft">twitter.com/croft</a><br />
               </p>
