--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -53,7 +53,7 @@
               <p>
                 Mike Croft<br />
                 Java Middleware Consultant<br />
-                mike.croft@payara.fish
+                mcroft@redhat.com
               </p>
             </div>
 
