minor css tweak

--- a/css/main.css
+++ b/css/main.css
@@ -170,7 +170,9 @@ ul, ol {
 .post code {
   border: 1px solid #ddd;
   background-color: #eef;
-  padding: 0 .2em;
+  /* Get rid of first-line indentation 
+  padding: 0 .2em; 
+  */
 }
 
 .post pre code {
