--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -52,7 +52,7 @@
             <div class="contact">
               <p>
                 Mike Croft<br />
-                Java Middleware Consultant<br />
+                Middleware Consultant<br />
                 mcroft@redhat.com
               </p>
             </div>
