--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -7,10 +7,11 @@
         <meta name="viewport" content="width=device-width">
         <meta name="google-site-verification" content="mtwO5i5L_qM6IjT4ImqoD9UR7PeJ0JODPhGicoZEppo" />
         <!-- syntax highlighting CSS -->
-        <link rel="stylesheet" href="/css/syntax.css">
+        <link rel="stylesheet" href="/css/gruvbox.css">
 
         <!-- Custom CSS -->
         <link rel="stylesheet" href="/css/main.css">
+        <link rel="stylesheet" href="/css/styles.css">
         {% include analytics.html %}
     </head>
     <body>
